支持html访问，支持jar启动