@@ -9,11 +9,22 @@
 
 * 个人网站:http://www.study-java.cn
 
-相关功能:
+学习Spring实现相关功能:
 
 * 基于Netty提供Http服务
-* 模拟实现Spring的注入
+* 实现依赖注入
 * 实现请求接入Controller层
 * 集成Mybatis
+* 非Spring项目注入Mapper
 * 模拟实现Spring的事务注解
 * 模拟实现Spring的拦截器(Ant路径匹配方式来支持通配符)
+* 请求路径支持通配符匹配
+* 支持html请求
+* Jar包启动:java -Djava.ext.dirs=./lib -cp jerry-1.0-SNAPSHOT.jar Main > 1.out
+
+TODO:
+
+* controller支持数据类型完善
+
+
+maven打包后，启动：java -Djava.ext.dirs=./lib -cp jerry-1.0-SNAPSHOT.jar Main > 1.out
